<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Myndie</string>
    <string name="title_activity_main">Myndie</string>
    <string name="title_activity_cadastro_cli">Sing-up</string>
    <string name="title_activity_settings">Configurations</string>

    <string name="title_filter">Filter</string>

    <string name="activity_title_item_search">Search</string>
    <string name="activity_title_item_listApps">Applications</string>
    <string name="activity_title_item_listDevs">Developers</string>
    <string name="activity_title_item_store">Market</string>
    <string name="activity_title_item_avaliations">Online Chat</string>
    <string name="activity_title_item_wishlist">Lista de desejos</string>
    <string name="activity_title_item_configurations">Settings</string>
    <string name="activity_title_item_rateus">Rate-us</string>

    <string name="activity_hint_etname">Name</string>
    <string name="activity_hint_etsenha">Password (Mínimum 5 caracters)</string>
    <string name="activity_hint_etdata">Birth date (dd/mm/yyyy)</string>
    <string name="activity_hint_etemail">E-mail</string>
    <string name="activity_hint_etusername">Username</string>
    <string name="activity_hint_etcountry">Choose your country:</string>
    <string name="activity_hint_etlanguage">Language</string>
    <string name="activity_hint_etimage">Image</string>
    <string name="activity_button_choosepic">Choose a picture</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>

    <string name="error_invalid_name">Invalid typed name</string>
    <string name="error_invalid_email">Invalid typed e-mail address</string>
    <string name="error_invalid_date">Invalid date</string>
    <string name="error_invalid_password">Password is too short</string>
    <string name="error_invalid_user">The username is already being used. Choose another username</string>

    <string name="error_incorrect_password">Incorrect password</string>
    <string name="error_field_required">This field is required</string>


    <!-- Strings related to Settings -->
    <string-array name="list_languages_preferences">
        <item>English</item>
        <item>Español</item>
        <item>Português</item>
    </string-array>


    <string-array name="list_languages_values">
        <item>en</item>
        <item>es</item>
        <item>pt</item>
    </string-array>

    <string name="pref_title_notification">Notifications</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_sound">Sound</string>
    <string name="pref_activated">Activated</string>
    <string name="pref_deactivated">Deactivated</string>
    <string name="pref_title_language">Language</string>
    <string name="pref_choose_language">Choose a language</string>

    <string name="toast_work_in_progress">Work in progress</string>
    <string name="prof_details">Details:</string>
    <string name="market_base_new">New</string>
    <string name="market_base_featured">Featured</string>
    <string name="market_base_avaliated">Most Avaliated</string>
    <string name="market_base_partners">Partners</string>

    <string name="app_Desc">Description</string>

    <!--Login Activity-->
    <string name="login_cad">Sign Up</string>
    <string name="login_forgot_password">Forgot my password</string>
    <string name="logout">Logout</string>
    <string name="change_password">An email was sent to you</string>
    <string name="register_cli">Successfully registered</string>


    <!--Application Activity-->
    <string name="app_activity_price">Compre por: </string>
    <string name="app_activity_version">Versão: </string>
    <string name="app_activity_publisher">Nome da publicadora: </string>
    <string name="app_activity_releasedate">Data de lançamento: </string>

    <!--Wishlist-->
    <string name="wish_nocontent">Não há itens na sua lista de desejos</string>
</resources>