<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--<android.support.v7.preference.SwitchPreferenceCompat
    android:defaultValue="true"
    android:title="Settings option"
   android:key="example_switch"
   android:summary="Turn this option on or off" />-->

   <CheckBoxPreference
       android:key="notification_chk"
       android:defaultValue="true"
       android:summaryOff="@string/pref_deactivated"
       android:summaryOn="@string/pref_activated"
       android:title="@string/pref_title_notification" />
   <CheckBoxPreference
       android:key="sound_chk"
       android:defaultValue="true"
       android:summaryOff="@string/pref_deactivated"
       android:summaryOn="@string/pref_activated"
       android:title="@string/pref_title_sound" />
   <CheckBoxPreference
       android:key="vibration_chk"
       android:defaultValue="true"
       android:summaryOff="@string/pref_deactivated"
       android:summaryOn="@string/pref_activated"
       android:title="@string/pref_title_vibrate" />
   <ListPreference
       android:entries="@array/list_languages_preferences"
       android:entryValues="@array/list_languages_values"
       android:negativeButtonText="@null"
       android:positiveButtonText="@null"
       android:key="selec_lang"
       android:summary="%s"
       android:dialogTheme="@style/DialogStyle"
       android:title="@string/pref_title_language" />
    <!--android:summary="@string/pref_choose_language"-->

</PreferenceScreen>